[package]
name = "sqlx-example"
version = "0.1.0"
edition = "2024"

[dependencies]
sqlx = { version = "0.7", features = ["mysql", "runtime-tokio-rustls", "chrono"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
